test/fail_compilation/fail138.d
typedef int T = void;

void main(){
   T x = void;
   x = x.init;
}

